--- a/Masterarbeit 4/Tex/chapter8.tex
+++ b/Masterarbeit 4/Tex/chapter8.tex
@@ -1,1 +1,26 @@
 \chapter{Zusammenfassung und Ausblick}\label{sec:chapter8}
+ In diesem Kapitel werden die erarbeiteten Ergebnisse in Kapitel 8.1 zusammengefasst. Weiterhin wird in Kapitel 8 ein Ausblick auf weitere zukünftig mögliche Forschungsthemen im Bereich der Anwendbarkeit von imperativen und deklarativen Prozessmodellierungssprachen gegeben.
+
+\section{Zusammenfassung}
+
+Im Verlauf dieser Arbeit wurden zunächst in Kapitel 2 grundlegende Begriffe im Bereich Prozessmodelle erläutert. Hierfür wurde zunächst in Kapitel 2.1 der Begriff Software Engineering erklärt sowie auf dessen Ziele, dessen Prozess und dessen Prinzipien eingegangen.\newline
+Anschließend wurden in Kapitel 2.2 Softwareprozessmodelle vorgestellt. Weiterhin wurden Software-Projekttypen sowie Leichtgewichtige und Schwergewichtige Prozessmodelle eingeführt.\newline
+
+In Kapitel 3 wurden ausführlich die Grundlagen der Modellierung dargelegt. Hierfür erfolgte zunächst eine Einführung in die Prozessmodellierung und es wurden deren Ziele sowie die Grundsätze ordnungsgemäßer Modellierung vorgestellt.\newline
+
+Prozessmodellierungssprachen wurden sodann in Kapitel 3.2 erläutert. Hier wurden auch die in dieser Arbeit verwendeten imperativen und deklarativen Prozessmodellierungssprachen eingeführt.\newline
+Ebeneso wurden in Kapitel 3.3 Modellierungswerkzeuge allgemein erklärt und es wurden die in der vorliegenden Arbeit eingesetzten Modellierungstools vorgestellt.\newline
+
+Die Anforderungserhebung erfolgte in Kapitel 4. Hier wurden die Vergleichskriterien für den in Kapitel 5 folgenden Vergleich  festgelegt.\newline
+
+Die Modellierung der imperativen und deklarativen Modell der drei Softwareprozessmodelle Scrum, Open UP und V-Modell XT erfolgte in Kapitel 5. Nache einer kurzen Einführung und Analyse der Modelle wurde die imperative und deklarative Modellierung derselbigen dargelegt. Anschließend erfolgte jeweils der Vergleich der Modellierung. In Kapitel 6.4 wurde abschließend ein Vergleich zwischen allen modellierten Prozessmodellen anhand der Anforderungskriterien aus Kapitel 4 durchgeführt. \newline
+
+In Kapitel 6 wurden die herausgearbeiteten Ergebnisse aus Kapitel 5 mit Hilfe einer Studie validiert. Zunächst wurde der Aufbau und der Ablauf der Studie genau erläutert. Weiterhin wurden die Ergebnisse der Studie präsentiert und ein Fazit gezogen. \newline
+
+Verwandte Arbeiten wurden abschließend in Kapitel 7 gegenüber der vorliegenden Arbeit abgegrenzt. Hierfür wurden jeweils Arbeiten aus den Bereichen Entwicklung von Softwareprozessmodellen, Verständlichkeit von Prozessmodellierungssprachen und Vergleich von Prozessmodellierungssprachen vorgestellt und es wurde erläutert in wie weit sich die vorliegende Arbeit von diesen Arbeiten abgrenzt.
+
+
+
+
+
+\section{Ausblick}
