--- a/Masterarbeit 4/Tex/chapter9.tex
+++ b/Masterarbeit 4/Tex/chapter9.tex
@@ -2,7 +2,7 @@
 
 In diesem Kapitel werden verwandte Arbeiten der vorliegenden Arbeit vorgestellt. Es werden Arbeiten zu den Themen Modellierung von Software-Engineering Prozessmodellen, Verständlichkeit von Prozessmodellierungssprachen und Vergleich von Prozessmodellierungssprachen vorgestellt und gegenüber der Thematik der vorliegenden Arbeit abgegrenzt.
 
-\section{Modellierung von Software-Engineering Prozessmodellen}
+\section{Modellierung von Softwareentwicklungsprozessen}
 
 Es gibt schon einige Arbeiten, welche sich mit der Modellierung von Software Engineering Prozessmodellen in BPMN beschäftigen.
 Die Bachelorarbeit \cite{Menhorn2014} beschäftigt sich mit der Analyse und der Überführung von Softwareentwicklungsprozessen in die Prozessmodellierungssprache BPMN und der Erweiterung von BPMN bei eventuellen Grenzen der Darstellbarkeit.\newline
