--- a/Masterarbeit 4/Tex/chapter9.tex
+++ b/Masterarbeit 4/Tex/chapter9.tex
@@ -14,7 +14,7 @@ Im Gegensatz zur vorliegenden Arbeit werden in diesen Arbeiten entweder jeweils 
 
 Verwandte Arbeiten zur Thematik Verständlichkeit von Prozessmodellierungssprachen werden im Folgenden vorgestellt.
 
-Es existieren bereits einige Arbeiten, welche die Verständlichkeit von Prozessmodellen untersuchen. \cite{bpm07} z.B. untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK), während in \cite{gruhn2006complexity} die Komplexität und Verständlichkeit von BPMN und UML-Diagrammen untersucht werden. \cite{reijers2011study} untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK) und BPMN im Hinblick auf die Komplexität der XOR-,OR und UND-Verzweigungen. \newline
+Es existieren bereits einige Arbeiten, welche die Verständlichkeit von Prozessmodellen untersuchen. \cite{bpm07} z.B. untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK), während in \cite{gruhn2006complexity} die Komplexität und Verständlichkeit von BPMN und UML-Diagrammen untersucht werden. \cite{reijers2011study} untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK) und BPMN im Hinblick auf die Komplexität der XOR-,OR- und UND-Verzweigungen. \newline
 In \cite{sabrina942} wird die Verständlichkeit von deklarativen Prozessmodellen im Hinblick auf die Verwendung von hierarchischen Unterprozessen untersucht. Eine weitere Arbeit, welche sich mit der Verständlichkeit von deklarativen Prozessmodellen beschäfigt ist \cite{haisjackl2014understanding}. Hier wird das Vorgehen von Systemanalysten beim Verstehen von deklarativen Modellen untersucht.\newline
 
 In der vorliegenden Arbeit werden einige Erkenntnisse der vorgestellten Arbeiten beim Modellieren und beim Vergleich der Prozessmodelle beachtet. Beispielsweise wurden Unterprozesse beim  Modellieren verwendet um komplexe Prozessmodelle übersichtlicher darzustellen. Diese wurden  aber beim Modellieren von sowohl BPMN als auch ConDec bei den gleichen Sachverhalten verwendet.\newline
