--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -722,7 +722,16 @@ year={2014}}
 }
 
 
-
+@article{mendling2010seven,
+  title={Seven process modeling guidelines (7PMG)},
+  author={Mendling, Jan and Reijers, Hajo A and van der Aalst, Wil MP},
+  journal={Information and Software Technology},
+  volume={52},
+  number={2},
+  pages={127--136},
+  year={2010},
+  publisher={Elsevier}
+}
 
 
 	
