--- a/Masterarbeit 4/Tex/chapter8.tex
+++ b/Masterarbeit 4/Tex/chapter8.tex
@@ -2,4 +2,5 @@
 
 \textbf{Cognitive Werte für verschiedene Elemente in Prozessmodellen}
 
-Genau wie geistige Werte für Constraints an sich fehlen, fehlen auch genaue werte, in wie stark die Komplexität eines Modelles wächst, pro zusätzlichem unterschiedlichem Element. Z.B. wäre es interessant für genauere Vergleiche zwischen Prozessmodellierungssprachen, in wie weit sich die Komplexität eines Prozessmodelles erhöht, wenn sich darin statt drei unterschiedlicher Elemente fünf unterschiedliche Elemente befinden. Gerade bei den ConDec Modellen gab es oftmals mehr unterschiedliche Constraints in den Modellen, als unterschiedliche Gateways in den BPMN Modellen. Daher wäre es für einen exakten Vergleich der Modelle nützlich, wenn man einen genauen Faktor hätte, um den sich die Komplexität in den ConDec Modellen erhöht, in Abhängigkeit der Anzahl der unterschiedlichen Constraints.  \textbf{Erweiterung/Anpassung ConDec}Die Prozessmodellierungssprache ConDec hat großes Potenzial. Jedoch weist sie derzeit noch einige Mängel auf. Hier können die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten im Prozessmodell selbst genannt werden. Hier sollte ConDec noch um weitere Notationselemente erweitert werden, welche Rollen und Artefakte darstellen.\newlineDa auch vielen unterschiedlichen Constraints bei ConDec ein Problem darstellen, könnte hier in weiteren Forschungen versucht werden, die Constraints eventuell anzupassen/umzustellen, um ein kleineres Spektrum an Constraints zu haben.\newline\textbf{Weitere Studien mit breiterem Spektrum an Teilnehmern}Wie bereits in Kapitel 7 erwähnt, weist die in dieser Arbeit durchgeführte Studie dahingehend Mängel auf, dass ein großer Teil der Teilnehmer bereits über Wissen in imperativen Prozessmodellierungssprachen verfügte. Hier sollten zukünftig noch weitere Studien durchgeführt werden, bei denen mehr Personen teilnehmen, die entweder keine Erfahrungen in beiden Prozessmodellierungssprachen aufweisen oder gleich viel Wissen in beiden Prozessmodellierungssprachen aufweisen.\newline
+Genau wie geistige Werte für Constraints an sich fehlen, fehlen auch genaue werte, in wie stark die Komplexität eines Modelles wächst, pro zusätzlichem unterschiedlichem Element. Z.B. wäre es interessant für genauere Vergleiche zwischen Prozessmodellierungssprachen, in wie weit sich die Komplexität eines Prozessmodelles erhöht, wenn sich darin statt drei unterschiedlicher Elemente fünf unterschiedliche Elemente befinden. Gerade bei den ConDec Modellen gab es oftmals mehr unterschiedliche Constraints in den Modellen, als unterschiedliche Gateways in den BPMN Modellen. Daher wäre es für einen exakten Vergleich der Modelle nützlich, wenn man einen genauen Faktor hätte, um den sich die Komplexität in den ConDec Modellen erhöht, in Abhängigkeit der Anzahl der unterschiedlichen Constraints.  \textbf{Erweiterung/Anpassung ConDec}Die Prozessmodellierungssprache ConDec hat großes Potenzial. Jedoch weist sie derzeit noch einige Mängel auf. Hier können die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten im Prozessmodell selbst genannt werden. Hier sollte ConDec noch um weitere Notationselemente erweitert werden, welche Rollen und Artefakte darstellen.\newlineDa auch vielen unterschiedlichen Constraints bei ConDec ein Problem darstellen, könnte hier in weiteren Forschungen versucht werden, die Constraints eventuell anzupassen/umzustellen, um ein kleineres Spektrum an Constraints zu haben.\newline
+Weiterhin sollte es auch möglich gemacht werden, mehrere Aktivitäten mit dem Init-Constraint auszustatten, um diese als mögliche Startaktivitäten zu markieren. Damit würde etwas Komplexität aus den Modellen heraus genommen, da der Leser des Modelles sich auf einen Blick orientieren könnte, bei welchen Aktivitäten gestartet werden kann.\newline\textbf{Weitere Studien mit breiterem Spektrum an Teilnehmern}Wie bereits in Kapitel 7 erwähnt, weist die in dieser Arbeit durchgeführte Studie dahingehend Mängel auf, dass ein großer Teil der Teilnehmer bereits über Wissen in imperativen Prozessmodellierungssprachen verfügte. Hier sollten zukünftig noch weitere Studien durchgeführt werden, bei denen mehr Personen teilnehmen, die entweder keine Erfahrungen in beiden Prozessmodellierungssprachen aufweisen oder gleich viel Wissen in beiden Prozessmodellierungssprachen aufweisen.\newline
