--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -127,7 +127,7 @@ Lediglich die mit BPMN erstellten Prozessmodelle können mit minimal relevanten 
 
 
 Bei Untersuchung der \textit{Klarheit} lässt sich feststellen, dass sich die Anzahl der Sequenzflusselemente/Existenz Constraints zwischen BPMN (26) und ConDec (7) unterscheidet. Ebenfalls gibt es eine Differenz bei der Anzahl der Gateways (6)/Constraints (13) und der Anzahl der unterschiedlichen Gateways (2)/Constraints (4) zwischen BPMN und ConDec. BPMN weist insgesamt eine höhere Anzahl an Elementen (44) auf als ConDec (32).\newline
-Wie in Kapitel 5 bereits erwähnt, kann sich eine größere Anzahl an Gateways/Constraints negativ auf die Verständlichkeit auswirken. Hier ist die Anzahl bei ConDec mehr als doppelt so hoch wie bei BPMN. In BPMN werden insgesamt zwei verschiedene Gateways (ein exklusives Gateway und ein paralleles Gateway) verwendet zur Darstellung von Verzweigungen. In ConDec werden vier verschiedene Constraints zur Darstellung verwendet. Da das Verständnis der Constraints in ConDec an sich relativ schwierig ist, ist das Verständnis eines Prozessmodelles mit vielen verschiedenen Constraints relativ schwer. Da die Anzahl der unterschiedlichen Constraints hier bei ConDec doppelt so hoch ist wie die Anzahl der Gateways bei BPMN und das mit ConDec modellierte Prozessmodell dadurch sehr viel komplexer ist, als das mit BPMN modellierte Prozessmodell, ist hier BPMN trotz der höheren Anzahl an Elementen insgesamt das verständlichere Modell.\newline
+Wie in Kapitel 5 bereits erwähnt, kann sich eine größere Anzahl an Gateways/Constraints negativ auf die Verständlichkeit auswirken. Hier ist die Anzahl bei ConDec mehr als doppelt so hoch wie bei BPMN. In BPMN werden insgesamt zwei verschiedene Gateways (ein exklusives Gateway und ein paralleles Gateway) verwendet zur Darstellung von Verzweigungen. In ConDec werden vier verschiedene Constraints zur Darstellung verwendet. Da das Verständnis der Constraints in ConDec an sich relativ schwierig ist, ist das Verständnis eines Prozessmodelles mit vielen verschiedenen Constraints relativ schwer. Zudem existiert im ConDec Modell keine eindeutige Start Aktivität, welche durch das Init-Constraint markiert ist. Dies liegt daran, dass mehrere Aktivitäten als Einstiegsaktivität in Frage kommen. Da die möglichen Einstiegsaktivitäten jedoch nicht auf den ersten Blick ersichtlich sind. Dies steigert die Komplexität des ConDec Modelles. Da zudem die Anzahl der unterschiedlichen Constraints hier bei ConDec doppelt so hoch ist wie die Anzahl der Gateways bei BPMN und das mit ConDec modellierte Prozessmodell dadurch sehr viel komplexer ist, als das mit BPMN modellierte Prozessmodell, ist hier BPMN trotz der höheren Anzahl an Elementen insgesamt das verständlichere Modell.\newline
 Somit ist hier BPMN in Bezug auf die \textit{Klarheit} geeigneter zum Modellieren als ConDec.\newline
 
 Die \textit{Wirtschaftlichkeit} unterscheidet sich bei den beiden Modellierungssprachen. Das mit BPMN erstellte Modell weist 26 Sequenzflusselemente auf und das mit ConDec erstellte Modell sieben Existenz Constraints. Bei ConDec hingegen werden mehr Constraints (13, 4 verschiedene) benötigt als Gateways (6, 2 verschiedene) bei BPMN. Bei BPMN müssen mehr Elemente (44) zum Modellieren des gleichen Sachverhaltes verwendet werden wie bei ConDec (32).  Die Tatsache, dass in ConDec vier unterschiedliche Constraints verwendet werden und in BPMN nur zwei unterschiedliche Gateways, macht den geistigen Aufwand für das Modellieren der beiden Prozesse in ConDec höher, als in BPMN. \newline
@@ -736,7 +736,7 @@ Die \textit{Relevanz} lässt sich nur bei BPMN einhalten, denn es ist wieder bei
 
 In Bezug auf die \textit{Klarheit} fällt gerade bei Betrachtung der Modelle der Phasen Inception, Elaboration, Construction und Transition auf, das bei Modellen bei denen mehrere Aktivitäten parallel zueinander ablaufen in BPMN deutlich mehr Elemente zur Darstellung des gleichen Sachverhaltes notwendig sind, als in ConDec. Bei allen vier Modellen sind doppelt so viele, teilweise auch mehr als doppelt so viele Elemente zur Darstellung in BPMN notwendig als in ConDec. Dies liegt an der Anzahl der Sequenzflusselemente und Gateways. BPMN weißt eine hohe Anzahl an eingehenden und ausgehenden Kanten an den parallelen Gateways auf. Da die Parallelität in ConDec nicht durch Constraints dargestellt werden muss, werden in ConDec nur die Existenz-Constraints benötigt, um die Aktivitäten auf einmalige Ausführung zu beschränken. Da sich die hohe Anzahl an Elementen in BPMN negativ auf die Verständlichkeit auswirken kann und in ConDec nur die leicht verständlichen Existenz-Constraints verwendet werden, sind die ConDec-Modelle zur Darstellung von parallelen Abläufen die leichter verständlichen Modelle. \newline
 Das Gleiche gilt für die Darstellung der Phasen des Open UP. Hier werden zur Darstellung des Prozesses in BPMN drei-mal so viele Elemente benötigt wie in ConDec. Dies liegt hier an der hohen Anzahl der XOR-Gateways, die beim Modellieren des Prozesses notwendig sind. Somit ist auch hier das Modell, welches mit ConDec erstellt wurde das leichter verständliche. \newline
-Beim Prozess Lösungsinkrement entwickeln werden bei BPMN mehr als doppelt so viele Elemente benötigt wie bei ConDec. Es werden fünf Gateways in BPMN verwendet und bei ConDec werden sechs Constraints benötigt. Bei ConDec werden drei verschiedene Constraints verwendet, bei BPMN jedoch keine verschiedenen Gateways, sondern immer nur das xor-Gateway. Dies erhöht die Komplexität im Gegensatz zum BPMN-Modell deutlich. Daher kann zusammenfassend gesagt werden, dass die Komplexität bei beiden Prozessmodellen in etwa gleich groß ist, da BPMN zwar deutlich mehr Elemente insgesamt aufweist, die Kombination von drei verschiedenen Constraints das ConDec-Modell jedoch leicht komplexer macht als das BPMN Modell.\newline
+Beim Prozess Lösungsinkrement entwickeln werden bei BPMN mehr als doppelt so viele Elemente benötigt wie bei ConDec. Es werden fünf Gateways in BPMN verwendet und bei ConDec werden sechs Constraints benötigt. Bei ConDec werden drei verschiedene Constraints verwendet, bei BPMN jedoch keine verschiedenen Gateways, sondern immer nur das XOR- Gateway. Dies erhöht die Komplexität im Gegensatz zum BPMN-Modell deutlich. Im BPMN Modell ist der Startpunkt durch das Startzeichen gekennzeichnet. ConDec Modell kann kein eindeutiger Start im Modell angegeben werden, da mehrere Aktivitäten als Start infrage kommen. Dies erhöht die Komplexität des ConDec Modells ebenfalls, da die Aktivitäten, mit welchen gestartet werden kann nicht auf einen Blick erkennbar sind. Daher kann zusammenfassend gesagt werden, dass die Komplexität des ConDec Modells leicht höher ist, da BPMN zwar deutlich mehr Elemente insgesamt aufweist, die Kombination von drei verschiedenen Constraints und das fehlende Startsymbol das ConDec-Modell leicht komplexer machten als das BPMN Modell.\newline
 Im Prozess Iteration planen und managen gibt es keine Verzweigungen. In ConDec werden sieben Constraints zur Darstellung verwendet. Die Anzahl der Elemente insgesamt ist bei beiden Modellen ungefähr gleich groß (ein Elemente mehr bei BPMN). Auf Grund der geringeren Komplexität des mit BPMN erstellten Modelles, da dort keine Gateways eingesetzt werden müssen, ist dieses das verständlichere.\newline
 Bei den Prozessen Anforderungen identifizieren und verfeinern und Produktdokumentation entwickeln weißen die ConDec-Modelle eine leicht höhere Anzahl an Elementen insgesamt auf. Außerdem werden hier auch in ConDec jeweils drei Constraints verwendet und in BPMN keine Gateways. Dies macht die ConDec-Modelle komplexer als die BPMN-Modelle, weswegen die mit BPMN erstellten Modelle verständlicher sind.\newline
 Beim Prozess Release deployen werden fast gleich viele Elemente in ConDec, wie auch in BPMN zur Darstellung des Prozesses benötigt (ein Element mehr in BPMN). In ConDec werden insgesamt fünf Constraints (drei verschiedene) zur Darstellung des Sachverhaltes benötigt, in BPMN nur zwei Gateways. Somit liegt hier das BPMN-Modell in Bezug auf die Komplexität unter dem ConDec-Modell und ist somit das verständlichere.\newline
