--- a/Masterarbeit 4/Tex/chapter1.tex
+++ b/Masterarbeit 4/Tex/chapter1.tex
@@ -1,1 +1,11 @@
-\chapter{Einleitung}\label{sec:chapter1}\section{Motivation}Heutzutage existiert eine Vielzahl unterschiedlicher Prozessmodellierungssprachen.\section{Zielstellung}Die vorliegende Arbeit verfolgt mehrere Ziele. Einerseits soll dem Leser der vorliegenden Arbeit ein grundlegendes Wissen über Software Engineering und Softwareprozessmodelle vermittelt werden. Weiterhin soll ihm auch grundlegende Kenntnisse in den Bereichen Prozessmodellierung und Prozessmodellierungssprachen, insbesondere imperative und deklarative Prozessmodellierungssprachen beigebracht werden. \newlineZudem sollen dem Leser die Softwareprozessmodelle Scrum, Open UP und V-Modell XT vorgestellt werden. Ein weiteres Ziel ist es hier, diese drei Modelle zu analysieren und somit für die nachfolgende Modellierung auf zu bereiten.\newlineDas nächste Ziel dieser Arbeit ist es sodann, Teile der Softwareprozessmodelle Scrum, Open UP und V-Modell XT in der imperativen Prozessmodellierungssprache BPMN und in der deklarativen Prozessmodellierungssprache ConDec zu modellieren. Hierdurch wird der Grundstein für den nachfolgenden Vergleich dieser Modelle gelegt.\newlineDas der Hauptziele dieser Arbeit ist sodann der Vergleich der Anwendbarkeit der deklarativen und imperativen Prozessmodellierungssprachen. Hierfür werden die zuvor erstellten Modelle genauestens analysiert und die beiden Proessmodellierungssprachen BPMN und ConDec werden dann bezüglich ihrer Eignung zum Modellieren verglichen.\newlineEin weiteres Ziel ist die Validierung der Ergebnisse des durchgeführten Vergleichs. Die Validierung wird mit Hilfe einer Studie durchgeführt.\newline\section{Aufbau der Arbeit}Eine Übersicht über den Aufbau dieser Arbeit gibt Abbildung.Zunächst werden in Kapitel 2 und 3 grundlegende Begriffe erläutert, welche für das Verständnis der vorliegenden Arbeit notwendig sind.\newlineKapitel 2 liefert zunächst einen Einblick in Prozessmodelle. In Kapitel 2.1 wird der Begriff Software Engineering eingeführt und es werden die Ziele, der Prozess sowie die Prinzipien des Software Engineering vorgestellt. Anschließend werden in Kapitel 2.2 Softwareprozesse erläutert. Hierfür werden Software-Projekttypen sowie Schwergewichtige und Leichtgewichtige Prozessmodelle definiert.\newlineIn Kapitel 3 erfolgt eine Einführung in die Grundlagen der Modellierung. Zum Einen werden Prozessmodellierung, die Ziele der Prozessmodellierung sowie die Grundsätze ordnungsgemäßer Modellierung vorgestellt. Zum Anderen erfolgt eine allgemeine Einführung in Prozessmodellierungssprachen und vor allem werden die in dieser Arbeit verwendete Imperative und Deklarative Modellierung erklärt. Des Weiteren werden noch die in der vorliegenden Arbeit verwendeten Modellierungswerkzeuge vorgestellt.\newlineDie Anforderungserhebung erfolgt in Kapitel 4. Hier werden in Kapitel 4.1 die Vergleichskriterien für die beiden Prozessmodellierungssprachen erläutert.\newlineDie imperative und deklarative Modellierung für Software Engineering Prozessmodelle erfolgt in Kapitel 5. Hier wird das Software Engineering Prozessmodell Scrum in Kapitel 5.1 zunächst eingeführt, anschließend analysiert, imperativ und deklarativ modelliert und die beiden Modellierungen werden miteinander verglichen. In Kapitel 5.2 wird zunächst der Open Unified Process (Open UP) vorgestellt, es folgt eine Analyse desselbigen und es werden imperative und deklarative Modelle des Open UP erstellt und miteinander verglichen. Das V-Modell XT wird in Kapitel 5.3 erläutert, analysiert, imperativ und deklarativ modelliert und die jeweiligen Modelle werden miteinander verglichen. In Kapitel 5.4 erfolgt ein insgesamter Vergleich der imperativen und deklarativen Modelle.\newlineDie Validierung der Ergebnisse aus Kapitel 5 wird in Kapitel 6 durchgeführt.In Kapitel 7 widmet sich verwandten Arbeiten zur vorliegenden Arbeit. Zunächst werden in Kapitel 7.1 verwandte Arbeiten zur Modellierung von Software Engineering Prozessmodellen gegenüber der vorliegenden Arbeit abgegrenzt. Weiterhin werden in Kapitel 7.2 Arbeiten über die Verständlichkeit von Prozessmodellierungssprachen und in Kapitel 7.3 Arbeiten über den Vergleich von Prozessmodellierungssprachen dargelegt und der Thematik dieser Arbeit gegenüber gestellt.\newlineKapitel 8 fasst die gesamt Arbeit nochmals zusammen und gibt weiterhin einen Ausblick auf zukünftige Forschung in dieser Thematik.
+\chapter{Einleitung}\label{sec:chapter1}\section{Motivation}In der heutigen Zeit werden die meisten Systeme von Software kontrolliert \cite{Puntambekar2007}. Diese weisen oftmals ein hohes Maß an Komplexität und Umfang auf bei deren Entwicklung auf. Diese Systeme müssen nicht nur eine hohe Qualität aufweisen, sondern auch in einer vorgegebenen Zeit zu vorgegebenen Kosten fertig gestellt werden \cite{Grechenig2010}. Aus diesem Grund ist es wichtig, bei der Entwicklung eines Systems einem effizienten Softwareprozessmodell zu folgen.\newline
+
+Um ein Softwareprozessmodell zu beschreiben bieten sich Prozessmodellierungssprachen an, da diese einerseits eine gewisse formale Exaktheit aufweisen und andererseits oftmals auch intuitiv verständlich sind \cite{thomas2009,kircher2006}. \newline
+
+Heutzutage existiert eine Vielzahl unterschiedlicher Prozessmodellierungssprachen. Über deren Vor- und Nachteile wird intensiv diskutiert. Hierbei werden auch sehr häufig die Vorzüge und Nachteile von imperativen und deklarativen Prozessmodellierungssprachen diskutiert \cite{fahland2009}. \newline
+
+Es existieren bereits Arbeiten und Studien, welche sich mit dem Vergleich von imperativen und deklarativen Prozessmodellierungssprachen beschäftigen. Jedoch gibt es noch kaum Arbeiten, welche sich intensiv mit dem Vergleich der Anwendbarkeit der beiden Prozessmodellierungssprachen bei der Modellierung beschäftigen.\newline
+
+Aus diesem Grund wird die Anwendbarkeit von imperativen und deklarativen Prozessmodellierungsansätzen in dieser Arbeit eingehend untersucht. Hierfür werden Teile der Softwareprozessmodelle Scrum, Open UP und V-Modell XT sowohl in imperativer, als auch in deklarativer Prozessmodellierungssprache modelliert und anschließend wird deren Anwendbarkeit eingehend anlysiert und diskutiert.\newline
+
+.\section{Zielstellung}Die vorliegende Arbeit verfolgt mehrere Ziele. Einerseits soll dem Leser der vorliegenden Arbeit ein grundlegendes Wissen über Software Engineering und Softwareprozessmodelle vermittelt werden. Weiterhin soll ihm auch grundlegende Kenntnisse in den Bereichen Prozessmodellierung und Prozessmodellierungssprachen, insbesondere imperative und deklarative Prozessmodellierungssprachen beigebracht werden. \newlineZudem sollen dem Leser die Softwareprozessmodelle Scrum, Open UP und V-Modell XT vorgestellt werden. Ein weiteres Ziel ist es hier, diese drei Modelle zu analysieren und somit für die nachfolgende Modellierung auf zu bereiten.\newlineDas nächste Ziel dieser Arbeit ist es sodann, Teile der Softwareprozessmodelle Scrum, Open UP und V-Modell XT in der imperativen Prozessmodellierungssprache BPMN und in der deklarativen Prozessmodellierungssprache ConDec zu modellieren. Hierdurch wird der Grundstein für den nachfolgenden Vergleich dieser Modelle gelegt.\newlineDas der Hauptziele dieser Arbeit ist sodann der Vergleich der Anwendbarkeit der deklarativen und imperativen Prozessmodellierungssprachen. Hierfür werden die zuvor erstellten Modelle genauestens analysiert und die beiden Proessmodellierungssprachen BPMN und ConDec werden dann bezüglich ihrer Eignung zum Modellieren verglichen.\newlineEin weiteres Ziel ist die Validierung der Ergebnisse des durchgeführten Vergleichs. Die Validierung wird mit Hilfe einer Studie durchgeführt.\newline\section{Aufbau der Arbeit}Eine Übersicht über den Aufbau dieser Arbeit gibt Abbildung.Zunächst werden in Kapitel 2 und 3 grundlegende Begriffe erläutert, welche für das Verständnis der vorliegenden Arbeit notwendig sind.\newlineKapitel 2 liefert zunächst einen Einblick in Prozessmodelle. In Kapitel 2.1 wird der Begriff Software Engineering eingeführt und es werden die Ziele, der Prozess sowie die Prinzipien des Software Engineering vorgestellt. Anschließend werden in Kapitel 2.2 Softwareprozesse erläutert. Hierfür werden Software-Projekttypen sowie Schwergewichtige und Leichtgewichtige Prozessmodelle definiert.\newlineIn Kapitel 3 erfolgt eine Einführung in die Grundlagen der Modellierung. Zum Einen werden Prozessmodellierung, die Ziele der Prozessmodellierung sowie die Grundsätze ordnungsgemäßer Modellierung vorgestellt. Zum Anderen erfolgt eine allgemeine Einführung in Prozessmodellierungssprachen und vor allem werden die in dieser Arbeit verwendete Imperative und Deklarative Modellierung erklärt. Des Weiteren werden noch die in der vorliegenden Arbeit verwendeten Modellierungswerkzeuge vorgestellt.\newlineDie Anforderungserhebung erfolgt in Kapitel 4. Hier werden in Kapitel 4.1 die Vergleichskriterien für die beiden Prozessmodellierungssprachen erläutert.\newlineDie imperative und deklarative Modellierung für Software Engineering Prozessmodelle erfolgt in Kapitel 5. Hier wird das Software Engineering Prozessmodell Scrum in Kapitel 5.1 zunächst eingeführt, anschließend analysiert, imperativ und deklarativ modelliert und die beiden Modellierungen werden miteinander verglichen. In Kapitel 5.2 wird zunächst der Open Unified Process (Open UP) vorgestellt, es folgt eine Analyse desselbigen und es werden imperative und deklarative Modelle des Open UP erstellt und miteinander verglichen. Das V-Modell XT wird in Kapitel 5.3 erläutert, analysiert, imperativ und deklarativ modelliert und die jeweiligen Modelle werden miteinander verglichen. In Kapitel 5.4 erfolgt ein insgesamter Vergleich der imperativen und deklarativen Modelle.\newlineDie Validierung der Ergebnisse aus Kapitel 5 wird in Kapitel 6 durchgeführt.In Kapitel 7 widmet sich verwandten Arbeiten zur vorliegenden Arbeit. Zunächst werden in Kapitel 7.1 verwandte Arbeiten zur Modellierung von Software Engineering Prozessmodellen gegenüber der vorliegenden Arbeit abgegrenzt. Weiterhin werden in Kapitel 7.2 Arbeiten über die Verständlichkeit von Prozessmodellierungssprachen und in Kapitel 7.3 Arbeiten über den Vergleich von Prozessmodellierungssprachen dargelegt und der Thematik dieser Arbeit gegenüber gestellt.\newlineKapitel 8 fasst die gesamt Arbeit nochmals zusammen und gibt weiterhin einen Ausblick auf zukünftige Forschung in dieser Thematik.
