--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -438,14 +438,6 @@ address = {Ulm}
   publisher={Logos Verlag Berlin}
 }
 
-@incollection{fahland2009,
-  author={Fahland, Dirk and L{\"u}bke, Daniel and Mendling, Jan and Reijers, Hajo and Weber, Barbara and Weidlich, Matthias and Zugal, Stefan},
-  title={Declarative versus imperative process modeling languages: The issue of understandability},
-  booktitle={Enterprise, Business-Process and Information Systems Modeling},
-  pages={353--366},
-  year={2009},
-  publisher={Springer}
-}
 
 @book{heinrich2007,
   author={Heinrich, G.},
@@ -731,6 +723,14 @@ year={2014}}
   pages={127--136},
   year={2010},
   publisher={Elsevier}
+}
+
+@book{richling2011autonomie,
+  title={Autonomie in verteilten IT-Architekturen},
+  author={Richling, J. and Werner, M. and Jaeger, M.C. and M{\"u}hl, G. and Hei{\ss}, H.U.},
+  year={2011},
+  tags= {Pattern; Software Engineering},
+  publisher={De Gruyter}
 }
 
 
